--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "install": "^0.13.0",
     "nodemon": "^3.1.4",
-    "path": "^0.12.7"
+    "npm": "^10.8.2",
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7"
   }
 }
